[package]
name = "rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.86"
js-sys = "0.3.63"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
web-sys = {version = "0.3.4", features = [
    'Window', 
    'Document', 
    'CanvasRenderingContext2d',
    'HtmlCanvasElement', 
    'HtmlImageElement', 
    'KeyboardEvent',
    'CssStyleDeclaration',
]}