[package]
name = "rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
serde = { version = "1.0.171", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
web-sys = {version = "0.3.64", features = [
    'Window', 
    'Document', 
    'CanvasRenderingContext2d',
    'HtmlCanvasElement', 
    'HtmlImageElement', 
    'KeyboardEvent',
    'CssStyleDeclaration',
]}
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.6"

[profile.release]
lto = true